fixing a big that caused the toggle's width to collapse if the parent was set to `display:flex`

--- a/toggle-switchy.css
+++ b/toggle-switchy.css
@@ -1,5 +1,5 @@
 /*
-Toggle Switchy v1.6
+Toggle Switchy v1.7
 by Adam Culpepper | @adamculpepper
 https://github.com/adamculpepper/toggle-switchy
 */
@@ -22,7 +22,7 @@ https://github.com/adamculpepper/toggle-switchy
 /* //////////////////////////
 CORE STYLES BELOW - NO TOUCHY
 ////////////////////////// */
-.toggle-switchy {display:inline-block; overflow:hidden; border-radius:3px; position:relative;}
+.toggle-switchy {display:inline-block; overflow:hidden; border-radius:3px; position:relative; flex-shrink:0;}
 .toggle-switchy input {display:none;}
 .toggle-switchy input[disabled] + label {opacity:0.5;}
 .toggle-switchy input + label {display:block; width:100%; height:100%; margin:0; cursor:pointer;}
@@ -88,8 +88,8 @@ CORE STYLES ABOVE - NO TOUCHY
 .toggle-switchy[data-style='rounded'],
 .toggle-switchy[data-style='rounded'] input + label .toggle			{border-radius:50px;}
 
-.toggle-switchy[data-style='rounded'] input + label:before {right:50%;}
-.toggle-switchy[data-style='rounded'] input + label:after {left:50%;}
+.toggle-switchy[data-style='rounded'] input + label:before			{right:50%;}
+.toggle-switchy[data-style='rounded'] input + label:after			{left:50%;}
 
 /* Text: Off */
 .toggle-switchy[data-text='false'] input + label:before,
